Add trainer controller, getAll, getById
