# storage/api-docs/api-docs.json
@@ -250,17 +250,7 @@
                                         "trainers": {
                                             "type": "array",
                                             "items": {
-                                                "properties": {
-                                                    "id": {
-                                                        "type": "integer",
-                                                        "example": 7
-                                                    },
-                                                    "created_at": {
-                                                        "type": "datetime",
-                                                        "example": "2021-09-02T12:57:04.000000Z"
-                                                    }
-                                                },
-                                                "type": "object"
+                                                "$ref": "#/components/schemas/User"
                                             }
                                         }
                                     },
@@ -303,37 +293,8 @@
                                             "type": "integer",
                                             "example": 200
                                         },
-                                        "total": {
-                                            "type": "integer",
-                                            "example": 3
-                                        },
-                                        "page": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "total_page": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "limit": {
-                                            "type": "integer",
-                                            "example": 10
-                                        },
-                                        "trainers": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "id": {
-                                                        "type": "integer",
-                                                        "example": 7
-                                                    },
-                                                    "created_at": {
-                                                        "type": "datetime",
-                                                        "example": "2021-09-02T12:57:04.000000Z"
-                                                    }
-                                                },
-                                                "type": "object"
-                                            }
+                                        "trainer": {
+                                            "$ref": "#/components/schemas/User"
                                         }
                                     },
                                     "type": "object"
@@ -393,37 +354,6 @@
                     }
                 },
                 "type": "object"
-            },
-            "Trainer": {
-                "required": [
-                    "first_name",
-                    "last_name",
-                    "email",
-                    "phone_number",
-                    "password"
-                ],
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "readOnly": "true",
-                        "example": "1"
-                    },
-                    "user_id": {
-                        "description": "Refernce to user relation",
-                        "type": "integer",
-                        "example": "1"
-                    },
-                    "created_at": {
-                        "$ref": "#/components/schemas/BaseModel/properties/created_at"
-                    },
-                    "updated_at": {
-                        "$ref": "#/components/schemas/BaseModel/properties/updated_at"
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "User"
-                }
             },
             "User": {
                 "required": [
